salesforce/force-app/main/default/objects/Lead/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <description>Ticked automatically when an expert is set. Derived — not editable by hand.</description>
    <formula>NOT(ISBLANK(Assigned_Expert__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>