salesforce/force-app/main/default/objects/Lead/fields/Assigned_Expert__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The vetted expert this enquiry was routed to. Set by the sales team.</description>
    <label>Assigned Expert</label>
    <referenceTo>Salesforce_Expert__c</referenceTo>
    <relationshipLabel>Assigned Leads</relationshipLabel>
    <relationshipName>Assigned_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>