salesforce/force-app/main/default/objects/Lead/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <description>The customer&apos;s own estimate. Not a commitment.</description>
    <label>Estimated Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>