salesforce/force-app/main/default/objects/Lead/fields/Budget_Basis__c.field-meta.xml
<CustomField>
    <fullName>Budget_Basis__c</fullName>
    <description>Whether the budget figure is per hour or per month.</description>
    <label>Budget Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per month</fullName>
                <default>true</default>
                <label>Per month</label>
            </value>
            <value>
                <fullName>Per hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>