salesforce/force-app/main/default/objects/Lead/fields/Budget_Negotiable__c.field-meta.xml
<CustomField>
    <fullName>Budget_Negotiable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked when the customer volunteered that the figure is movable.</description>
    <label>Budget Negotiable</label>
    <type>Checkbox</type>
</CustomField>