salesforce/force-app/main/default/objects/Lead/fields/Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key__c</fullName>
    <description>The customer&apos;s email, lowercased. The key this Lead is matched on, so the same person asking twice adds an Issue rather than a duplicate Lead. Do not edit.</description>
    <externalId>true</externalId>
    <label>Customer Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>