salesforce/force-app/main/default/objects/Lead/fields/Engagement_Length__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Length__c</fullName>
    <description>How long they want support for, as they chose it, e.g. 6 months.</description>
    <label>Engagement Length</label>
    <length>40</length>
    <type>Text</type>
</CustomField>