salesforce/force-app/main/default/objects/Lead/fields/Platform_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Platform_Lead_Id__c</fullName>
    <description>The enquiry&apos;s id in the support platform. The key this Lead is upserted on — do not edit.</description>
    <externalId>true</externalId>
    <label>Platform Lead Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>