salesforce/force-app/main/default/objects/Lead/fields/Quoted_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Currency__c</fullName>
    <label>Quoted Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>