salesforce/force-app/main/default/objects/Lead/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <description>One-off fix or ongoing engagement, as the customer chose on the form.</description>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instant support</fullName>
                <default>true</default>
                <label>Instant support</label>
            </value>
            <value>
                <fullName>Scheduled support</fullName>
            </value>
            <value>
                <fullName>Certification support</fullName>
            </value>
            <value>
                <fullName>Long-term support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>